# whatnot-trivia

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml
tests/: test_bot.py
whatbot/: bot.py  models.py  utils.py
whatnot_trivia/: models.py  utils.py
