[tool.poetry]
name = "whatnot-trivia"
version = "0.1.0"
description = ""
authors = ["Stephen Bailey <stkbailey@gmail.com>"]
readme = "README.md"
packages = [{include = "whatnot_trivia"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
rockset = "^1.0.5"
streamlit = "^1.20.0"
pandas = "^1.5.3"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
streamlit-autorefresh = "^0.0.1"
beautifulsoup4 = "^4.11.2"
gspread = "^5.7.2"
selenium = "^4.8.2"
ipykernel = "^6.21.3"
pydantic = "^1.10.6"
ipython = "^8.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
